--- a/templates/home.html
+++ b/templates/home.html
@@ -6,10 +6,10 @@ Home
 
 {% block content %}
 <div class="text-center mt-5">
-    <h1>Welcome to the Library System</h1>
+    <h1>Welcome to the Bookstore</h1>
     <p>Explore a wide range of books, audiobooks, and more!</p>
     <div class="mt-4">
-        <a href="/shop" class="btn btn-primary">Login to Shop</a>
+        <a href="/shop" class="btn btn-primary">Login to Purchase</a>
     </div>
 </div>
 {% endblock %}
