--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@ Home
     <h1>Welcome to the Bookstore</h1>
     <p>Explore a wide range of books, audiobooks, and more!</p>
     <div class="mt-4">
-        <a href="/shop" class="btn btn-primary">Login to Purchase</a>
+        <a href="/bookstore" class="btn btn-primary">Login to Purchase</a>
     </div>
 </div>
 {% endblock %}
