--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,12 @@ Login
 {% block content %}
 <div class="container mt-5">
     <h1>Login</h1>
-    <p>Welcome to the login page. Please enter your credentials below.</p>
-    <p>This is just a placeholder page, and no actual login functionality exists.</p>
+    <form method="POST" action="">
+        {{ form.hidden_tag() }}
+        {{ form.username }}
+        {{ form.password }}
+        {{ form.submit }}
+    </form>
+    <a href="/sign-up" class="btn btn-primary">Don't have an account? Sign Up here!</a> <br>
 </div>
 {% endblock %}
