--- a/templates/library_chatbot.html
+++ b/templates/library_chatbot.html
@@ -141,7 +141,7 @@
     <div class="message bot-message">
         <img src="{{ url_for('static', filename='image.png') }}" alt="Bookatti">
         <div>
-            <strong>Bookatti:</strong> How may I help you? Here are some things you can ask me:
+            <strong>Library Bookatti:</strong> How may I help you? Here are some things you can ask me:
             <ul>
                 {% for prompt in suggested_prompts %}
                 <li>{{ prompt }}</li>
