--- a/templates/library_home.html
+++ b/templates/library_home.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "baselib.html" %}
 
 {% block title %}
 Library Home
@@ -14,3 +14,4 @@ Library Home
     </div>
 </div>
 {% endblock %}
+
