--- a/templates/baselib.html
+++ b/templates/baselib.html
@@ -23,7 +23,7 @@
     /* Active tab styles */
     .navbar .nav-link.active {
         color: yellow !important; /* Yellow for active tab */
-        font-size: 18px;
+        font-size: 16px;
         font-weight: bold;
     }
 
@@ -80,11 +80,11 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="chatbotModalLabel">Bookstore Chatbot</h5>
+                <h5 class="modal-title" id="chatbotModalLabel">Library Bookatti</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <iframe id="chatbotIframe" src="http://localhost:5001/" style="width: 100%; height: 500px; border: none;"></iframe>
+                <iframe id="chatbotIframe" src="http://localhost:5002/" style="width: 100%; height: 500px; border: none;"></iframe>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
