--- a/templates/home.html
+++ b/templates/home.html
@@ -69,4 +69,5 @@ Home
             Together, we can build a future where every page turned brings us closer to a greener planet.
         </p>
     </section>
+</div>
 {% endblock %}
