--- a/templates/basebs.html
+++ b/templates/basebs.html
@@ -57,6 +57,9 @@
         .chatbot-button i {
             font-size: 24px; /* Icon size */
         }
+        body{
+        overflow-y: scroll; /* Show scrollbars */
+        }
     </style>
 
 </head>
