--- a/templates/basehome.html
+++ b/templates/basehome.html
@@ -63,7 +63,7 @@
         margin: 0;
         padding: 0;
         color: #333; /* Neutral text color for readability */
-        line-height: 1.6;
+        overflow-y: scroll; /* Show scrollbars */
         }
     </style>
 
