--- a/templates/baselib.html
+++ b/templates/baselib.html
@@ -11,6 +11,8 @@
     .navbar {
         background-color: #4682B4; /* Steel blue */
         font-family: Arial, sans-serif;
+        padding-left: 16px
+        padding-right: 16px
     }
 
     /* Link styles */
