--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
 Home
 {% endblock %}
 
-{% block content %} <br> <br> <br> <br> <br> <br> <br> <br> <br>
+{% block content %}
 
 <head>
 	<title>Login</title>
