--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg" style="background-color: #4682B4;">
-    <div class="container-fluid">
+<nav class="navbar navbar-expand-lg" style="background-color: #4682B4; padding-left: 16px; padding-right: 16px;">
+    <div class="container-fluid" style="padding-left: 15px; padding-right: 15px">
         <!-- Toggler for Mobile -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
             <span class="navbar-toggler-icon"></span>
