--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -6,7 +6,7 @@ Home
 
 {% block content %}
 <head>
-	<title>Login</title>
+	<title>Sign Up</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
@@ -18,6 +18,12 @@ Home
 			padding: 0;
 			height: 100%;
 			background: #7abecc !important;
+		}
+		.login-wrapper {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			height: calc(100vh - 56px);
 		}
 		.user_card {
 			width: 350px;
@@ -71,11 +77,12 @@ Home
 
 </head>
 <body>
+<div class="login-wrapper">
 	<div class="container h-100">
 		<div class="d-flex justify-content-center h-100">
 			<div class="user_card">
 				<div class="d-flex justify-content-center">
-					<h3 id="form-title">REGISTER ACCOUNT</h3>
+					<h3 id="form-title">SIGN UP</h3>
 				</div>
 				<div class="d-flex justify-content-center form_container">
 
@@ -101,7 +108,7 @@ Home
 
 
 				   		<div class="d-flex justify-content-center mt-3 login_container">
-				 			<input class="btn login_btn" type="submit" value="Register Account">
+				 			<input class="btn login_btn" type="submit" value="Sign Up">
 				   		</div>
 					</form>
 				</div>
@@ -114,6 +121,7 @@ Home
 			</div>
 		</div>
 	</div>
+</div>
 	<script>
 	</script>
 </body>
