--- a/templates/book_loan.html
+++ b/templates/book_loan.html
@@ -7,7 +7,7 @@ Book Loan
 {% block content %}
 <div class="container">
     <div class="header">
-        <h1>Best Selling Books</h1>
+        <h1>Our Books</h1>
     </div>
 
     <div class="filters">
